--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "pinia": "^2.2.6",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@hypernym/nuxt-gsap": "^2.4.3"
   }
 }
